--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,34 +1,115 @@
-.time-counter {
+* {
+  box-sizing: border-box;
+}
+
+/*Background Gradient Pulse*/
+
+#gradient {
+  width: 100%;
+  height: 100%;
+  padding: 0px;
+  margin: 0px;
+}
+
+/*Welcome Page Only*/
+
+.btn-primary {
+  background-color: #98BFA3;
+  border-color: #98BFA3;
+  margin-top: 50px;
+}
+
+.btn-primary:hover {
+  background-color: #6C8773;
+  border-color: #5F7866;
+}
+
+.btn-primary:active:focus {
+  background-color: #41523F;
+  border-color: #334031;
+}
+
+.glyphicon-off {
+  font-size: 30px;
+  margin-top: 6px;
+}
+
+/*Main Page*/
+
+html,
+body,
+#wrapper {
+  width: 90%;
+  height: 90%;
+  margin: auto;
 }
 
 body {
-  background-image: url(../images/stock-vector-rock-n-roll-elements-grunge-style-seamless-pattern-endless-s-style-pop-culture-background-747909985.jpg);
+  /* background-color: #000000; */
+  padding: 0px;
+  margin: 0px;
+  font-family: 'Terrain';
+  background-image: url("../images/stock-vector-rock-n-roll-elements-grunge-style-seamless-pattern-endless-s-style-pop-culture-background-747909985.jpg");
 }
 
-div.container{
-    background-color: white;
-    color: black;
-    width: 960px;
-    height: 540px;
-    margin: auto;
-}
-header{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    text-align: center;
-}
-
-footer{
-  vertical-align: text-bottom;
+.jumbotron h1 {
+  font-size: 120px;
   text-align: center;
-  color: white;
-  font: bolder;
+  color: #76947E;
+}
+
+.jumbotron {
+  background: #F8FFFA;
+  border-width: 1px;
+  border-color: black;
+  border-style: dashed;
+  margin-top: 80px;
+  height: 100%;
+}
+
+p {
+  text-align: center;
+}
+
+/*question*/
+h3
+{
+  font-family: Abyssopelagic;
+  letter-spacing: 3px;
+  word-spacing: 4px;
+  margin-top: 45px;
+  text-align: center;
+  font-size: 24px;
+  font-weight: bold;
+  color: #61302F;
+  margin-bottom: 40px;
+  line-height: 40px;
+}
+
+/*answers*/
+h4
+{
+  color: #F8FFFA;
+  font-size: 40px;
+  text-align: center;
+  margin-bottom: 25px;
+  background-color: rgba(138, 146, 178, 0.6);
+  padding: 5px 0;
+  border-radius: 5px;
+}
+
+/*timer*/
+h5
+{
+  color: #343F38;
+  text-align: center;
   font-size: 20px;
+  letter-spacing: 2px;
+  margin-top: 40px;
+  font-family: Abyssopelagic;
 }
 
-div.first{
-  text-align: center;
-}
 
-h1.title{
-  padding-top: 30px;
+.answers {
+  margin-top: 30px;
 }
